Implements argument for the !inventory command, replaces string concatenation with .formatted. Adds HashMap for rarity table to reduce database queries.